--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "JavaScript DateまたはIntl.DateTimeFormatオブジェクトの現在の日付と時刻を偽装します。",
+        "message": "JavaScript DateまたはIntl.DateTimeFormatオブジェクトの現在日時を、任意の日時に上書きできるようにします。",
         "description": "description shown in browser UI"
     }
 }
